--- a/style/architects.css
+++ b/style/architects.css
@@ -41,7 +41,7 @@ nav>ul {
 nav li {
     list-style: none;
     margin: 30px;
-    
+
 
 }
 
@@ -85,19 +85,76 @@ nav li a {
     width: 100%;
 }
 
+main {
+    max-width: 1440px;
+    margin: 0 auto;
+}
+
+.team-container {
+    display: flex;
+    align-items: center;
+}
+
+.team-image-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 1.5rem;
+}
+
+.team-description-title {
+    max-width: 468px;
+}
+
+.team-description-contain {
+    max-width: 537px;
+    color: var(--Dark-03, #727272);
+    font-family: Work Sans;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+}
+
+.team-description {
+    padding-left: 70px;
+    padding-right: 70px;
+}
+
+.Quick-list {
+    color: var(--Dark-03, #727272);
+    font-family: Work Sans;
+    font-size: 45px;
+    font-weight: 500;
+}
+
+.of-Our {
+    color: var(--Dark-01, #131313);
+    font-family: Work Sans;
+    font-size: 45px;
+    font-weight: 700;
+}
+
+.Features {
+    color: #FF900E;
+    font-size: 45px;
+    font-weight: 700;
+}
+
 @media screen and (max-width: 576px) {
     header {
         padding: 20px;
     }
-    nav{
+
+    nav {
         flex-direction: column;
     }
 }
+
 @media screen and (min-width: 576px) and (max-width: 960px) {
     header {
         padding: 20px;
     }
-    nav{
+
+    nav {
         flex-direction: column;
         padding: 50px;
     }
