--- a/style/architects.css
+++ b/style/architects.css
@@ -87,7 +87,7 @@ nav li a {
 
 main {
     max-width: 1440px;
-    margin: 0 auto;
+    margin: 70px auto;
 }
 
 .team-container {
@@ -117,6 +117,7 @@ main {
 .team-description {
     padding-left: 70px;
     padding-right: 70px;
+    margin-bottom: 30PX;
 }
 
 .Quick-list {
@@ -139,6 +140,83 @@ main {
     font-weight: 700;
 }
 
+.fact-section-title {
+    color: var(--Dark-01, #131313);
+    font-family: Work Sans;
+    font-size: 45px;
+    font-weight: 700;
+    margin-bottom: 24px;
+}
+
+.fact-card-container {
+    display: flex;
+    justify-content: space-around;
+}
+
+.fact-section-description {
+    max-width: 542px;
+    color: var(--Dark-03, #727272);
+    font-family: Work Sans;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+    margin-bottom: 100px;
+}
+
+.fact-card-container .card {
+    border-radius: 8px;
+    border: 1px solid #FF900E;
+    text-align: center;
+    padding: 40px;
+}
+
+.fact-card-container .card-stats {
+    color: var(--Dark-02, #424242);
+    font-family: Work Sans;
+    font-size: 45px;
+    font-weight: 600;
+    margin-top: 20px;
+    margin-bottom: 0px;
+
+}
+
+.fact-card-container .card-title {
+    color: var(--Dark-03, #727272);
+    font-family: Work Sans;
+    font-size: 20px;
+    font-weight: 600;
+    margin-top: 0px;
+
+}
+
+.sponsors {
+    text-align: center;
+    margin-top: 180px;
+}
+
+.sponsors-title {
+    color: var(--Dark-01, #131313);
+    font-family: Work Sans;
+    font-size: 45px; 
+    font-weight: 700;
+    margin-bottom: 24px;
+}
+
+.sponsors-description {
+    color: #727272;
+    font-family: Work Sans;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+    margin-bottom: 50px;
+}
+.sponsors-img-container
+{
+    display: flex;
+    justify-content: space-evenly;
+}
+
+
 @media screen and (max-width: 576px) {
     header {
         padding: 20px;
@@ -146,6 +224,29 @@ main {
 
     nav {
         flex-direction: column;
+    }
+
+    .team-container {
+        flex-direction: column-reverse;
+
+    }
+
+    .team-image-container {
+        grid-template-columns: 1fr;
+    }
+
+    .fact-card-container {
+        flex-direction: column;
+        gap: 10px;
+    }
+
+    .facts {
+        margin: auto 20px;
+    }
+    .sponsors-img-container{
+        flex-direction: column;
+        gap: 40px;
+        margin: auto 30px;
     }
 }
 
@@ -157,5 +258,29 @@ main {
     nav {
         flex-direction: column;
         padding: 50px;
+    }
+
+    .team-container {
+        flex-direction: column-reverse;
+    }
+
+    .fact-card-container {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 50px;
+    }
+
+    .facts {
+        margin: auto 50px;
+    }
+    .sponsors-img-container{
+        display: grid;
+        grid-template-columns: repeat(2 , 1fr);
+        gap: 40px;
+        margin: auto 50px;
+        
+    }
+    .sponsors{
+        margin: auto 50px;
     }
 }
